# fract-ol

./: CMakeLists.txt  Makefile  README.md  fractol
includes/: fractol.h
libft/: Makefile  ft_atod.c  libft.h
srcs/: fractol_utils.c  hooks.c  hooks_bonus.c  main.c  math.c  math_julia.c  math_tricorn.c  rgb.c  struc.c
