cmake_minimum_required(VERSION 3.12)

project(fract-ol)
include_directories(libft)
file(GLOB SOURCES_LIBFT "libft/*.c")
add_library(LIBFT STATIC ${SOURCES_LIBFT})
include_directories(includes)
file(GLOB SOURCES_FRACTOL "srcs/*.c")
add_library(FRACTOL STATIC ${SOURCES_FRACTOL})
file(GLOB SOURCES "srcs/*.c" "libft/*.c")
add_executable(fractol ${SOURCES})
find_library(MLX mlx42 MLX42/)
target_link_libraries(fractol LINK_PUBLIC ${MLX})